force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/LLC_BI__Pricing_Payment_Component__c.object-meta.xml
<CustomObject>
    <label>Pricing Payment Component</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Payment Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>