force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Comments__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Comments__c</fullName>
    <description>This field is optional. It is manually populated. The loan officer uses this text field to add comments to the payment.</description>
    <inlineHelpText>Comments</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>