force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Count__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Count__c</fullName>
    <description>--DEPRECATED--</description>
    <label>-D Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>