force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Includes_Interest__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Includes_Interest__c</fullName>
    <defaultValue>true</defaultValue>
    <description>--DEPRECATED--</description>
    <label>-D Includes Interest</label>
    <type>Checkbox</type>
</CustomField>