force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Interest_Unit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Unit__c</fullName>
    <description>--DEPRECATED-- Interest Unit</description>
    <inlineHelpText>Interest Unit</inlineHelpText>
    <label>-D Interest Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>