force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Interest_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Value__c</fullName>
    <description>--DEPRECATED-- Interest Value</description>
    <inlineHelpText>Interest Value</inlineHelpText>
    <label>-D Interest Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>