force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Maximum_Payment__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum_Payment__c</fullName>
    <description>The system or user populates this mandatory field with the highest possible payment amount on a payment stream.</description>
    <inlineHelpText>This system or user populated field displays the highest possible payment amount on a payment stream.</inlineHelpText>
    <label>Maximum Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>