force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Payment_Type__c</fullName>
    <description>The administrator populates this optional picklist to reflect payment types.</description>
    <inlineHelpText>Specifies the payment type of a payment stream.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal &amp; Interest</fullName>
            </value>
            <value>
                <fullName>Principal + Interest</fullName>
            </value>
            <value>
                <fullName>Interest Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>