force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Percent_Of_Total_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percent_Of_Total_Loan_Amount__c</fullName>
    <description>The user populates this optional percentage field if they select a percent of balance or percent of outstanding. This percentage field reflects the users desired percentage  principal amount.</description>
    <label>Percent of Principal</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>