force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Principal_Amount__c</fullName>
    <description>The user manually populates this currency field if they select a flat amount in the Base Principal Payment On field. This currency field reflects the users desired flat amount.</description>
    <inlineHelpText>Enter the flat amount desired for your principal payment.</inlineHelpText>
    <label>Principal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>